Refactor DriverqueryCommand for better process handling
Refactor DriverqueryCommand to use ProcessBuilder for command execution and add error handling with a dedicated thread for error stream.